<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/page_goals"
        android:enabled="true"
        android:icon="@drawable/fire"
        android:title="@string/page_goals"
        />
    <item
        android:id="@+id/page_homeworks"
        android:enabled="true"
        android:icon="@drawable/clipboard"
        android:title="@string/page_homeworks"
        />
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/page_home"
        />
    <item
        android:id="@+id/page_courses"
        android:enabled="true"
        android:icon="@drawable/library"
        android:title="@string/page_courses"
        />
    <item
        android:id="@+id/page_schedule"
        android:enabled="true"
        android:icon="@drawable/layout_grid"
        android:title="@string/page_schedule"
        />
</menu>