<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/f_add_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.Mindo_kotlin.FullscreenContainer"
    tools:context=".Add_homework"


    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
        <ImageView
            android:id="@+id/addhomework_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"


            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="close" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/addhomework_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            app:srcCompat="@drawable/save"
            android:layout_gravity="end"
            android:contentDescription="save" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addcr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addhomexork_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:textColor="@color/main_blue"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addcr_desc"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Description"
        android:inputType="textPersonName"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcr_title"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addhomework_desc"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:maxLength="50"


            android:textColor="@color/black"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/puzzle"
        android:gravity="start"
        android:text="@string/cd_main_homework_card_difficult"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcr_desc" />

    <RadioGroup
        android:id="@+id/addhomework_diff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/addhomework_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/addhomework_inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/intermediate" />

        <RadioButton
            android:id="@+id/addhomework_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/warning"
        android:gravity="start"
        android:text="@string/importance"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addhomework_diff" />

    <RadioGroup
        android:id="@+id/addhomework_imp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/addhomework_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/addhomework_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Medium" />

        <RadioButton
            android:id="@+id/addhomework_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>




