<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/f_add_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.Mindo_kotlin.FullscreenContainer"
    tools:context=".Add_course"


    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <ImageView
            android:id="@+id/addcourse_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/cd_main_homework_card_btn_dismiss"

            android:onClick="close"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_course"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/addcourse_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:layout_margin="10dp"
            app:srcCompat="@drawable/save" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addcr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addcourse_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:textColor="@color/main_blue"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addcr_desc"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Description"
        android:inputType="textPersonName"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcr_title"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addcourse_desc"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:maxLength="50"


            android:textColor="@color/black"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/clock"
        android:gravity="start"
        android:text="@string/cd_main_courses_card_duration"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcr_desc" />

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"

        android:gravity="start"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/addcourse_timestart"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="time"
        android:text="@string/time"
        android:textSize="16sp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tv_from"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


    </TextView>

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/to"
        app:layout_constraintEnd_toStartOf="@+id/addcourse_timeend"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/addcourse_timeend"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="time"
        android:text="@string/time"
        android:textSize="16sp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


    </TextView>

    <TextView
        android:id="@+id/addcr_date"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:text="Date"

        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcourse_timestart" />

    <TextView
        android:id="@+id/addcr_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableStart="@drawable/alarm_clock"
        android:gravity="start"
        android:text="@string/alarm"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcr_date" />

    <Switch
        android:id="@+id/addcourse_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unset"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcr_date" />


</androidx.constraintlayout.widget.ConstraintLayout>