<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="11dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/main_red"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mycr_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Class"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/mycr_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:maxHeight="80dp"
                android:text="desc"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alef"
                android:layout_marginStart="10dp"
                android:text="@string/cd_main_courses_card_duration"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/clock" />

            <TextView
                android:id="@+id/mycr_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:ems="10"
                android:textSize="14sp"
                android:text="@string/hint_start"
                android:inputType="time"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/mycr_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:ems="10"
                android:textSize="14sp"
                android:inputType="time"
                android:text="@string/hint_end"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/warning"
                android:fontFamily="@font/alef"
                android:layout_marginStart="10dp"
                android:text="@string/importance"
                android:textSize="14sp"
                android:textStyle="bold" />
            <ProgressBar
                android:id="@+id/mycr_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:indeterminate="false"
                android:max="3"
                android:progress="1"
                android:layout_weight="1"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textVie"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/alarm_clock"
                android:fontFamily="@font/alef"
                android:layout_marginStart="10dp"
                android:text="@string/alarm"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/mycr_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="14sp"
                android:text="boolean"
                android:inputType="time"

                />


        </LinearLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/mycr_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/trash_2"
                android:contentDescription="@string/delete"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mycr_delete"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/write"
                android:contentDescription="@string/edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>