<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="222dp"
    android:layout_height="210dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="7dp"


    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/main_blue">

        <TextView
            android:id="@+id/cr_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Class"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:textColor="@color/white"

            />

        <TextView
            android:id="@+id/cr_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="desc"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:maxHeight="80dp"

            />
    </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:drawableStart="@drawable/clock"
            android:fontFamily="@font/alef"


            android:text="@string/cd_main_courses_card_duration"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="14sp"
                android:text="@string/hint_start"
                android:inputType="time"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="14sp"
                android:inputType="time"
                android:text="@string/hint_end"
                android:gravity="center"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/cr_dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alef"
            android:gravity="center_horizontal"


            android:text="@string/cd_main_homework_card_btn_dismiss"
            android:textColor="@color/main_blue" />
    </LinearLayout>

</androidx.cardview.widget.CardView>