<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Class"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Class"
            android:textColor="@color/white"
android:id="@+id/toolbar_text"

            android:textSize="20sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="13dp"

            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        android:id="@+id/class_courses"
        >
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:drawableStart="@drawable/library"
            android:text="@string/page_courses"
            android:layout_gravity="center_vertical"
            android:paddingStart="5dp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/class_homeworks"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/clipboard"
            android:paddingStart="5dp"
            android:text="@string/page_homeworks"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/class_goals"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="5dp"
            android:text="@string/page_goals"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/fire" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/class_resources"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="5dp"
            android:text="@string/resources"
            android:textSize="20sp"
            app:drawableStartCompat="@android:drawable/ic_input_get"

            />

    </androidx.cardview.widget.CardView>

</LinearLayout>